2007-10-01  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckShellFiles):
	shorten message by using relative path. Display symlink destination.
	Correct for-loop to check only files.
	(CygbuildCmdInstallCheckSetupHint): Correct variable name 'retval'.
	Added 'category:' line check.
	(CygbuildDefineGlobalCommands): Rewrote perl and python handling.
	Define variables PERL_VERSION and PYTHON_VERSION.

2007-09-30  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildPatchApplyMaybe): Unpatch files
	in reverse order.

2007-09-28  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckReadme):
	Corrected version regexp.
	(CygbuildCmdInstallCheckLibFiles): Fix call to cygcheck function.
	(CygbuildReadmeReleaseMatchCheck): Impreoved awk gsub() regexp.
	(CygbuildInstallFixMain): New.
	(CygbuildInstallFixMandir): New.
	(CygbuildCmdInstallCheckLibFiles): Comment out one echo.

2007-09-20  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/postinstall.sh.tmp (InstallConffiles): Use 'egrep -E'
	and better regexp to ignore also empty lines.

	* bin/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES::
	preremove-manifest-from.lst): Correct #PKGDIR to $PKGDIR.

	* bin/cygbuild.sh: (CygbuildVersionInfo): Rewrote substitution
	commands. Now Debian special *.orig extension is handled correctly.
	(CygbuildCommandMain::repackage-all,repackage-bin): Remove check
	commands.
	(CygbuildRunShell): Removed 'cd'. Run in current directory.
	(CygbuildSetLDPATHpython): More careful LD_LIBRARY_PATH and
	$LD_RUN_PATH treatment.
	(CygbuildCmdInstallCheckDirStructure): Added /etc check
	(CygbuildShellEnvironenment): Define DESTDIR and prefix.
	(CygbuildCmdInstallCheckManualPages): Tighten manual page directory
	check.

2007-09-19  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/install.tar.options.tmp: Mention
	--exclude=cygbuild-no-docdir-install

	* bin/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES::diff.options):
	Clarify paragraphs.